--- a/style.css
+++ b/style.css
@@ -11,12 +11,11 @@ body{
 
 .container{
     background: rgb(141, 118, 228);
-    width: 100vh;
+    width: 700px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding: 50px;
     align-self: center;
-    flex-wrap: wrap;
 
 }
 
@@ -63,7 +62,7 @@ body{
     font-weight: bolder;
     color: black;
     background: white;
-    padding: 20px;
+    padding: 10px;
     margin-top: 50px;
     outline: none;
 }
